🐛 hopefully fixes images on mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1382,8 +1382,8 @@ img {
 
 .wpo-project-single-item .wpo-project-single-main-img img {
   width: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
+  /* -o-object-fit: cover;
+    object-fit: cover; */
 }
 
 @media (max-width: 425px) {
@@ -4986,7 +4986,7 @@ img {
   .hero-section {
       padding-top: 80px;
     }
-  
+
     .hero-section .section-title h4 {
     margin: 0;
     margin-top: 40px;
@@ -4998,7 +4998,7 @@ img {
   .hero-section {
       padding-top: 80px;
     }
-  
+
     .hero-section .section-title h4 {
     font-size: 18px;
     line-height: 25px;
